@@ -5,6 +5,7 @@ import com.ouroboros.sleepingqueen.card.QueenFieldController;
 import com.ouroboros.sleepingqueen.deck.Card;
 import com.ouroboros.sleepingqueen.deck.CardType;
 import com.ouroboros.sleepingqueen.deck.cardcollection.NumberCard;
+import com.ouroboros.sleepingqueen.deck.cardcollection.QueenCard;
 import com.ouroboros.sleepingqueen.mainPlayer.MainPlayerCardField;
 import com.ouroboros.sleepingqueen.mainPlayer.MainPlayerQueenField;
 import com.ouroboros.sleepingqueen.player.Player;
@@ -21,9 +22,7 @@ import javafx.scene.text.Text;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 
 public class BoardViewController {
 
@@ -193,20 +192,35 @@ public class BoardViewController {
         MainPlayer.setText(playerList.get(currentTurnPlayerIndex).getName());
     }
 
+    private boolean isAllQueenCardSelected() {
+        int totalQueenCard = 0;
+        for (Player player : playerList) {
+            for (Card card : player.getQueenCards()) {
+                if (card != null) {
+                    totalQueenCard++;
+                }
+            }
+        }
+        return totalQueenCard == 12;
+    }
+
     private void endPlayerTurn() {
         Toast.show((Stage) rootPane.getScene().getWindow(), playerList.get(currentTurnPlayerIndex).getName() + " has ended the turn", toastTimeOut);
         PauseTransition pause = new PauseTransition(Duration.seconds(rootPane.getScene() != null ? 2 : 0));
         pause.setOnFinished(event -> {
+            //Check for win condition
+            checkWinCondition();
+
             int nextTurnPlayerIndex = nextTurnPlayerIndexForReal;
             if (nextTurnPlayerIndex == -1) {
                 nextTurnPlayerIndex = (currentTurnPlayerIndex + 1) % getPlayerCount();
             }
             // reset next player
             nextTurnPlayerIndexForReal = -1;
-        if (nextTurnPlayerIndex == currentTurnPlayerIndex) {
-            // Player gets another turn
-            return;
-        }
+            if (nextTurnPlayerIndex == currentTurnPlayerIndex) {
+                // Player gets another turn
+                return;
+            }
 
             // Swap currentSubPlayerIndex between current player and next player
             int temp = currentSubPlayerIndex.get(currentTurnPlayerIndex);
@@ -285,12 +299,14 @@ public class BoardViewController {
             renderMainPlayerQueenCard(currentTurnPlayerIndex);
         }
 
-        if (isRoseQueen) {
+        if (isRoseQueen && !isAllQueenCardSelected()) {
             // Rose Queen - player can pick another queen
             isQueenCardSelected = true;
             Toast.show((Stage) rootPane.getScene().getWindow(), "Picked Rose Queen, please select another Queen", toastTimeOut);
-        } else {
+        } else if (!isAllQueenCardSelected()) {
             isQueenCardSelected = false;
+        } else {
+            endPlayerTurn();
         }
         selectedQueenCard = null;
     }
@@ -315,6 +331,7 @@ public class BoardViewController {
 
     private void KnightLogic() {
         isKnightPhase = true;
+        Toast.show((Stage) rootPane.getScene().getWindow(), "Select Queen Card from other players", toastTimeOut);
         // Enter knight phase: player can select opponent queen
         subPlayerFieldController.setIdle(false);
         System.out.println("Knight card can be played");
@@ -407,6 +424,40 @@ public class BoardViewController {
         return -1;
     }
 
+    private void checkWinCondition() {
+        int playerCount = getPlayerCount();
+        int queenCardLimit = (playerCount <= 3) ? 5 : 4;
+        int queenPointLimit = (playerCount <= 3) ? 50 : 40;
+
+        for (Player player : playerList) {
+            int queenCardCount = 0;
+            int queenPointCount = 0;
+
+            for (Card card : player.getQueenCards()) {
+                if (card != null) {
+                    queenCardCount++;
+                    queenPointCount += ((QueenCard) card).getPoint();
+                }
+            }
+
+            if (queenCardCount >= queenCardLimit || queenPointCount >= queenPointLimit) {
+                Toast.show((Stage) rootPane.getScene().getWindow(), player.getName() + " wins the game!", toastTimeOut);
+                // Handle win logic here, e.g., end the game, show a win screen, etc.
+                return;
+            }
+        }
+
+        if (isAllQueenCardSelected()) {
+            playerList.stream()
+                    .max(Comparator.comparingInt(player -> Arrays.stream(player.getQueenCards())
+                            .filter(Objects::nonNull)
+                            .mapToInt(card -> ((QueenCard) card).getPoint())
+                            .sum())).ifPresent(highestPointPlayer -> Toast.show((Stage) rootPane.getScene().getWindow(),
+                            highestPointPlayer.getName() + " wins the game with the most points!", toastTimeOut));
+
+        }
+    }
+
     private void handlePlayNowButtonClick() {
         if (isQueenCardSelected) {
             pickQueenCardFromField();
@@ -415,9 +466,9 @@ public class BoardViewController {
             }
             return;
         } else if (isKnightPhase) {
-            System.out.println("Pick opponent queen card from sub-player");
+            Toast.show((Stage) rootPane.getScene().getWindow(), "Please select a queen card to steal", toastTimeOut);
+
             if (selectedAwakenQueenIndex == -1) {
-                // TODO: prompt player to choose a queen card to steal
                 System.out.println("Please pick a queen card to steal");
                 return;
             }
@@ -426,6 +477,7 @@ public class BoardViewController {
             // Enter dragon phase: the targeted player can play Dragon card to defend
             isDragonPhase = true;
             int targetPlayerIndex = getPlayerIndexByAwakenQueenIndex(selectedAwakenQueenIndex);
+            Toast.show((Stage) rootPane.getScene().getWindow(), "Player " + playerList.get(targetPlayerIndex).getName() + " can play Dragon card to defend", toastTimeOut);
             nextTurnPlayerIndexForReal = (currentTurnPlayerIndex + 1) % getPlayerCount();
             endPlayerTurn(targetPlayerIndex);
             return;
@@ -440,7 +492,7 @@ public class BoardViewController {
 
         if (isDragonPhase) {
             if (cards.size() > 1) {
-                // TODO: prompt player to select only one card
+                Toast.show((Stage) rootPane.getScene().getWindow(), "Only one card can be played for Dragon phase", toastTimeOut);
                 System.out.println("Invalid number of cards selected for Dragon phase");
                 return;
             }
@@ -453,12 +505,12 @@ public class BoardViewController {
                 // rerender
                 renderSubPlayer(stolenPlayerIndex, currentSubPlayerIndex.get(stolenPlayerIndex));
                 renderMainPlayerQueenCard(currentTurnPlayerIndex);
-            } else if (cards.get(0).getType() != CardType.DRAGON) {
-                // TODO: prompt fail to defend
+            } else if (cards.getFirst().getType() != CardType.DRAGON) {
+                Toast.show((Stage) rootPane.getScene().getWindow(), "Only Dragon card can be play", toastTimeOut);
                 System.out.println("Invalid card selected for Dragon phase");
                 return;
-            } else if (cards.get(0).getType() == CardType.DRAGON) {
-                // TODO: prompt defend succesfully
+            } else if (cards.getFirst().getType() == CardType.DRAGON) {
+                Toast.show((Stage) rootPane.getScene().getWindow(), playerList.get(currentTurnPlayerIndex).getName() + " defended successfully", toastTimeOut);
                 // played card is dragon => the queen is defended
                 removeCardsFromPlayerDeck(cards);
                 replacePlayedCards(chosenCardIndices);
